fix banner showing through filters on ios (#719)

--- a/client/src/styles/PortfolioFilters.scss
+++ b/client/src/styles/PortfolioFilters.scss
@@ -373,7 +373,6 @@
         left: 0;
         right: 0;
         height: var(--filter-bar-top-height);
-        z-index: 100;
         background-color: $justfix-table-grey;
         border-radius: 0.8rem 0.8rem 0 0;
         box-sizing: border-box;
